fix boss list scroll overflow issue

--- a/src/pages/boss/modes/list/BossList.scss
+++ b/src/pages/boss/modes/list/BossList.scss
@@ -3,7 +3,9 @@
   overflow: hidden;
 
   h2 {
-    margin-bottom: 40px;
+    margin: 0 0 20px 0;
+
+    font-size: 22px;
   }
 
   .toolbar {
@@ -22,7 +24,8 @@
     flex-direction: column;
     gap: 1rem;
 
-    height: 100%;
+    padding: 0 0 20px;
+    height: calc(100% - 110px);
     overflow: auto;
   }
 }
